@@ -494,6 +494,14 @@ http_client_consume_body(struct http_client *client)
     assert(client != NULL);
     assert(client->response.read_state == READ_BODY);
 
+    if (fifo_buffer_full(client->input))
+        /* remove the "READ" event - if the buffer is full, and
+           http_body_consume_body() blocks, I don't want to check if
+           the connection has been closed, so we're just removing this
+           event now; it will be added again at the end of this
+           function */
+        event2_nand(&client->event, EV_READ);
+
     nbytes = http_body_consume_body(&client->response.body_reader, client->input);
     if (nbytes == 0)
         return false;
